--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
         "build:scss": "node scripts/build-scss.js",
         "clean": "node scripts/clean.js",
         "start": "npm run build && node scripts/start.js",
-        "start:debug": "npm run build && node scripts/start-debug.js"
+        "start:debug": "npm run build && node scripts/start-debug.js",
+        "predeploy": "npm run clean && npm run build:pug && npm run build:scss && npm run build:scripts && npm run build:assets",
+        "deploy": "gh-pages -d dist"
     },
     "description": "O Bico Vermello website",
     "keywords": [
@@ -31,6 +33,7 @@
         "browser-sync": "2.26.13",
         "chokidar": "3.4.3",
         "concurrently": "5.3.0",
+        "gh-pages": "^3.1.0",
         "postcss": "8.1.4",
         "prettier": "2.1.2",
         "pug": "3.0.0",
