--- a/package.json
+++ b/package.json
@@ -1,20 +1,97 @@
 {
-    "title": "O Bico Vermello",
     "name": "obico",
     "version": "1.0.0",
+    "private": true,
+    "description": "O Bico Vermello website",
+    "author": {
+        "name": "Carlos Capote"
+    },
     "scripts": {
-        "build": "npm run clean && npm run build:pug && npm run build:scss && npm run build:scripts && npm run build:assets",
-        "build:assets": "node scripts/build-assets.js",
-        "build:pug": "node scripts/build-pug.js",
-        "build:scripts": "node scripts/build-scripts.js",
-        "build:scss": "node scripts/build-scss.js",
-        "clean": "node scripts/clean.js",
-        "start": "npm run build && node scripts/start.js",
-        "start:debug": "npm run build && node scripts/start-debug.js",
-        "predeploy": "npm run clean && npm run build:pug && npm run build:scss && npm run build:scripts && npm run build:assets",
+        "serve": "vue-cli-service serve",
+        "build": "vue-cli-service build",
+        "test:unit": "vue-cli-service test:unit",
+        "test:e2e": "vue-cli-service test:e2e",
+        "lint": "vue-cli-service lint",
         "deploy": "gh-pages -d dist"
     },
-    "description": "O Bico Vermello website",
+    "dependencies": {
+        "bootstrap": "4.5.3",
+        "core-js": "^3.6.5",
+        "vue": "^3.0.0",
+        "vue-router": "^4.0.0-0",
+        "vuex": "^4.0.0-0"
+    },
+    "devDependencies": {
+        "@types/jest": "^24.0.19",
+        "@typescript-eslint/eslint-plugin": "^2.33.0",
+        "@typescript-eslint/parser": "^2.33.0",
+        "@vue/cli-plugin-babel": "~4.5.0",
+        "@vue/cli-plugin-e2e-cypress": "~4.5.0",
+        "@vue/cli-plugin-eslint": "~4.5.0",
+        "@vue/cli-plugin-router": "~4.5.0",
+        "@vue/cli-plugin-typescript": "~4.5.0",
+        "@vue/cli-plugin-unit-jest": "~4.5.0",
+        "@vue/cli-plugin-vuex": "~4.5.0",
+        "@vue/cli-service": "~4.5.0",
+        "@vue/compiler-sfc": "^3.0.0",
+        "@vue/eslint-config-prettier": "^6.0.0",
+        "@vue/eslint-config-typescript": "^5.0.2",
+        "@vue/test-utils": "^2.0.0-0",
+        "autoprefixer": "10.0.1",
+        "babel-eslint": "^10.1.0",
+        "browser-sync": "2.26.13",
+        "chokidar": "3.4.3",
+        "concurrently": "5.3.0",
+        "eslint": "^6.7.2",
+        "eslint-plugin-prettier": "^3.1.3",
+        "eslint-plugin-vue": "^7.0.0-0",
+        "gh-pages": "^3.1.0",
+        "node-sass": "^4.12.0",
+        "postcss": "8.1.4",
+        "prettier": "2.1.2",
+        "pug": "3.0.0",
+        "sass": "1.28.0",
+        "sass-loader": "^8.0.2",
+        "shelljs": "0.8.4",
+        "typescript": "~3.9.3",
+        "upath": "2.0.0",
+        "vue-jest": "^5.0.0-0"
+    },
+    "eslintConfig": {
+        "root": true,
+        "env": {
+            "node": true
+        },
+        "extends": [
+            "plugin:vue/vue3-essential",
+            "eslint:recommended",
+            "@vue/typescript/recommended",
+            "@vue/prettier",
+            "@vue/prettier/@typescript-eslint"
+        ],
+        "parserOptions": {
+            "parser": "babel-eslint",
+            "ecmaVersion": 2020
+        },
+        "rules": {},
+        "overrides": [
+            {
+                "files": [
+                    "**/__tests__/*.{j,t}s?(x)",
+                    "**/tests/unit/**/*.spec.{j,t}s?(x)"
+                ],
+                "env": {
+                    "jest": true
+                }
+            }
+        ]
+    },
+    "browserslist": [
+        "> 1%",
+        "last 2 versions",
+        "not dead"
+    ],
+    "_id": "obico@1.0.0",
     "keywords": [
         "css",
         "sass",
@@ -24,21 +101,6 @@
         "template"
     ],
     "license": "MIT",
-    "author": "Carlos Capote",
-    "dependencies": {
-        "bootstrap": "4.5.3"
-    },
-    "devDependencies": {
-        "autoprefixer": "10.0.1",
-        "browser-sync": "2.26.13",
-        "chokidar": "3.4.3",
-        "concurrently": "5.3.0",
-        "gh-pages": "^3.1.0",
-        "postcss": "8.1.4",
-        "prettier": "2.1.2",
-        "pug": "3.0.0",
-        "sass": "1.28.0",
-        "shelljs": "0.8.4",
-        "upath": "2.0.0"
-    }
+    "readme": "ERROR: No README data found!",
+    "title": "O Bico Vermello"
 }
